# Label_fixer

./: .gitignore  LabelFixer.bat  README.md  build_exe.bat  core.py  gui.py  label_print.py  pyproject.toml
