[project]
name = "label-print"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.3.0",
    "pymupdf>=1.28.0",
    "pywin32>=312 ; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "ty>=0.0.59",
]
